--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.21.5",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "cors": "^2.8.5",
     "mqtt": "^5.10.1",
